--- a/mo.tex
+++ b/mo.tex
@@ -391,11 +391,32 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$. \to
 
 
 
-\section{Feb 5: The unoriented bordism ring}
+\section{Feb 5: $MO$ is a free ring spectrum}
 
-the splitting principle
+Our first goal for today is to show the following freeness property of the ring spectrum $MO$:
+\begin{theorem}
+Let $E$ be a ring spectrum.  Homotopy classes of ring maps $MO \to E$ are in natural bijection with factorizations \[\S \to MO(1) \to E\] of the unit map for $E$. \qed
+\end{theorem}
 
-$MO$--orientations agree with factorizations of the unit through $MO(1)$
+\noindent This proof falls into two halves, and one half is much easier than the other.  The data of a ring map $MO \to E$ appears to be considerly more data than a factorization, and showing that one begets the other turns out to be the easier direction of the proof.  Suppose that we're given such a ring map $MO \to E$, so that we can apply the Thom isomorphism machinery from the beginning of this story.  Then, recall the definition of $MO(1)$ as a Thom spectrum: \[MO(1) = T(\L - 1 \downarrow \RP^\infty).\]  Restricting the base space all the way to a point gives \[T(\L - 1 \downarrow *) = \S,\] and this fits into the following commutative diagram with the ring map we were given:
+\begin{center}
+\begin{tikzcd}
+\S \arrow{r} \arrow{d} & MO \arrow{d} \\
+MO(1) \arrow{ru} \arrow[densely dotted]{r} & E.
+\end{tikzcd}
+\end{center}
+The horizontal arrow across the top is the unit map for $MO$, so the long composite is the unit map for $E$, and the dotted composite is the desired factorization of the unit.  In terms of cohomology classes, the Thom isomorphism gives \[E^* \RP^\infty \cong \widetilde E^* MO(1).\]  The left--hand group has the canonical element ``$1$'', and the data of ``$\cong$'' is the Thom isomorphism, sending $1$ to a canonical map $MO(1) \to E$.  This, too, is the dotted arrow.\todo{Can this all be phrased more clearly?}
+
+Remembering that $MO(1) \simeq \Susp^{-1} \Susp^\infty \RP^\infty$, we see that this was what powered our computation of $H\F_2^* \RP^\infty$ from earlier, and in fact this map $MO(1) \to E$ is enough to deduce an Thom isomorphism in $E$--cohomology for $MO(1)$ alone.  The other direction of the proof then sounds more serious: we have to show that if we have a Thom isomorphism for the bundle involved in forming $MO(1)$, then we can extract from that compatible Thom isomorphisms for all bundles.  This kind of reduction is famous enough to have a name: it is called ``the splitting principle''.
+
+\todo{Keep talking.}
+
+
+
+
+
+
+\section{Feb 8: The unoriented bordism ring}
 
 identification of $MO^{H\F_2}$ with $\Coord(\RP^\infty_{H\F_2})$
 
