--- a/quillen.tex
+++ b/quillen.tex
@@ -421,7 +421,7 @@ The Thom isomorphism $E_* BU \cong E_* MU$ respects both the $E_*$--module struc
 Let $\alpha = (\alpha_1, \ldots, \alpha_n, \ldots)$ denote a multi-index where every entry is nonnegative and almost every entry is zero, and let $c_\alpha$ denote the corresponding monomial \[c_\alpha = \prod_{j=1}^\infty c_j^{\alpha_j}.\]  Additionally, we let $s_\alpha \in E^* MU$ denote the image of $c_\alpha$ under the Thom isomorphism.  It is called the \textit{$\alpha${\th} Landweber--Novikov operation}.
 \end{definition}
 
-\begin{remark}\todo{This is I.5.1 in Adams's blue book.}
+\begin{remark}\citeme{I.5.1 in Adams's blue book}
 Let $E = MU$.  The Landweber--Novikov operations are the \emph{stable} operations acting on $MU$--cohomology, analogous to the Steenrod operations we started the semester talking about.  They satisfy the following properties:
 \begin{itemize}
 \item $s_0$ is the identity.
@@ -498,23 +498,105 @@ The chain model for ordinary homology is actually rigid enough to define power o
 
 
 
-\section{Quillen's theorem I: push-pull formulas}
+\section{Quillen's theorem}
 
-transverse intersection is an easy push-pull formula.
+\begin{lemma}
+Consider a Cartesian square of manifolds
+\begin{center}
+\begin{tikzcd}
+Y \times_X Z \arrow{r}{g'} \arrow{d}{f'} & Z \arrow{d}{f} \\
+Y \arrow{r}{g} & X,
+\end{tikzcd}
+\end{center}
+where $g$ is transversal to $f$, $f$ is proper and complex-oriented, and $f'$ is endowed with the pull-back of the complex orientation of $f$. Then \[g^* f_* = f'_* (g')^*: h(Z) \to h(Y). \qed\]
+\end{lemma}
 
-the clean intersection formula. generalizes to nontransverse intersections.
+\begin{definition}
+Let $X$ be a manifold.  Two closed submanifolds $Y$ and $Z$ are said to \textit{intersect cleanly} when $W = Y \cap Z$ is a submanifold and for each $w \in W$, $T_w W = T_w Y \cap T_w X$.  In this case, we draw a Cartesian square
+\begin{center}
+\begin{tikzcd}
+W \arrow{r}{j'} \arrow{d}{i'} & Z \arrow{d}{i} \\
+Y \arrow{r}{j} & X.
+\end{tikzcd}
+\end{center}
+The \textit{excess bundle} of the intersection, $F$, is defined by the exact sequence
+\begin{center}
+\begin{tikzcd}
+& & (i')^* TY \arrow{rd} \\
+0 \arrow{r} & \nu_{i'} \arrow{rr} \arrow{ru} & & (j')^* \nu_i \arrow{r} & F \arrow{r} & 0.
+\end{tikzcd}
+\end{center}
+\end{definition}
 
-the main relation: the $p$\th cyclic power operation is additive.
+\begin{remark}
+$Y$ and $Z$ intersect transversally exactly when $F = 0$.
+\end{remark}
 
+\begin{remark}
+If $\nu_{i'}$, $\nu_i$, and $F$ are endowed with complex structures compatible with this exact sequence, then the Gysin maps induce Thom isomorphisms
+\begin{align*}
+i_* \co MU^*(Z) & \xrightarrow{\simeq} MU^{*+a}(X, X \setminus Z), \\
+i'_* \co MU^*(W) & \xrightarrow{\simeq} MU^{*+b}(Y, Y \setminus W),
+\end{align*}
+where $a$ and $b$ are the real dimensions of $\nu_i$ and $\nu_{i'}$ respectively.
+\end{remark}
 
+\begin{lemma}\citeme{Proposition 3.3 of Quillen}\needproof{Euler classes}
+For $z \in MU^*(Z)$, \[j^* i_* z = i'_*(e(F) \cdot (j')^* z)\] in $MU^{*+a}(Y, Y \setminus W)$.
+\end{lemma}
+\begin{proof}
+\todo{Maybe we should prove this? It's not hard. It doesn't have anything to do with formal geometry, though.}
+\end{proof}
 
-\section{Quillen's theorem II: Lazard's theorem}
+Now let $G$ be a compact Lie group and let $i: Z \to X$ be an embedding of $G$--manifolds. Then the $G$--fixed submanifold $X^G$ and $Z$ intersect cleanly in the diagram
+\begin{center}
+\begin{tikzcd}
+Z^G \arrow{r}{r_Z} \arrow{d}{i^G} & Z \arrow{d}{i} \\
+X^G \arrow{r}{r_X} & X.
+\end{tikzcd}
+\end{center}
+Since $r_Z^*(\nu_i)$ is a $G$--bundle over a trivial $G$ space, there is a decomposition $r_Z^*(\nu_i) = \nu_{i^G} \oplus \mu_i$, where $\nu_{i^G}$ has no $G$--action and $\mu_i = F$, the excess bundle, splits further as a sum of eigenbundles corresponding to the nontrivial irreducible representations of $G$.  The clean intersection formula then gives \[r_X^* i_* z = i^G_*(e(\mu_i) \cdot r_Z^* z)\] for $z \in MU^*(EG \times_G Z)$.  More generally, if $f: Z \to X$ is a proper complex-oriented $G$-map, we pay take the complex orientation of $f$ to be represented by a factorization \[Z \xrightarrow i E \xrightarrow p X,\] where $E$ is a complex $G$-bundle on $X$ and $i$ is an embedding with an equivariant complex structure on its normal bundle.  Let $\mu(E)$ be the sum of the eigenbundles of $r_X^* E$ corresponding to the nontrivial irreducible representations of $G$, where, as before, $r_X$ is the inclusion of the fixpoint submanifold $X^G \subseteq X$.
 
-consequence: the map $L \to MU_*$ surjects
+\begin{lemma}\citeme{Proposition 3.8 of Quillen}
+If $z \in MU^*(EG \times_G Z)$, then in $MU^*(BG \times X^G)$: \[e(\mu(E)) \cdot r_X^* f_* z = f^G_*(e(\mu_i) \cdot r_Z^* z). \qed\]
+\end{lemma}
 
-lazard's theorem.
+\begin{lemma}\citeme{Proposition 3.12 of Quillen}
+Suppose $G$ acts transitively on $\{1, \ldots, k\}$ and let $\rho$ denote the induced reduced regular $G$-representation. Suppose that $f: Z \to X$ is a proper complex-oriented map of dimension $2q$ and that $m$ is an integer larger than the dimension of $Z$, so that $m \eps + \nu_f$ is a vector bundle over $Z$, well-defined up to isomorphism, where $\eps$ is the trivial complex line bundle. Then \[e(\rho)^m P(f_* 1) = f_* e(\rho \otimes (m \eps + \nu_f)) \in MU^{2m(k-1)-2qk}(BG \times X). \qed\]
+\end{lemma}
 
-consequence: the subring of coefficients of the formal group law generate.
+Set $G = \Z/k$.  The bundle $\rho$ splits as $\bigoplus_{i=1}^{k-1} \eta^i$ for $\eta$ the line bundle coming from an inclusion $\Z/k \into U(1)$.  Then, if $\L$ is any other line bundle with a trivial $G$--action,
+\begin{align*}
+e(\rho \otimes \L) & = e \left( \bigoplus_{i=1}^{k-1} \eta^i \otimes \L \right) = \prod_{i=1}^{k-1} e(\eta^i \otimes \L) \\
+& = \prod_{i=1}^{k-1} F([i]_F(v), e(\L)) = w + \sum_{j=1}^\infty a_j(v) e(\L)^j,
+\end{align*}
+where $v = e(\eta)$, $a_j(T) \in C\llbracket T \rrbracket$ for $C$ the subring of $MU^*(*)$ generated by the FGL, and \[w = e(\rho) = (k-1)! v^{k-1} + \sum_{j \ge k} b_j v^j\] for $b_j \in C$.  In general, $e(\rho \otimes E)$ has \[e(\rho \otimes E) = \sum_{|\alpha| \le r} w^{r-|\alpha|} a(v)^\alpha c_\alpha(E).\]
+
+\begin{corollary}\citeme{Quillen Prop 3.17}
+In the notation above, the Steenrod operation and Landweber operations are related to each other by the formula \[w^{n+q} P x = \sum_{|\alpha| \le n} w^{n - |\alpha|} a(v)^\alpha s_\alpha(x)\] for $x \in MU^{-2q}(X)$ and $n$ is any integer sufficiently large with respect to $\dim X$ and $q$. \qed
+\end{corollary}
+
+\begin{theorem}\citeme{Quillen Theorem 5.1}
+If $X$ is the homotopy type of a finite complex, then
+\begin{align*}
+MU^*(X) & = C \cdot \sum_{q \ge 0} MU^q(X), \\
+\widetilde{MU}^*(X) & = C \cdot \sum_{q > 0} MU^q(X).
+\end{align*}
+\end{theorem}
+\begin{proof}
+We can focus on \[\widetilde{MU}^{2*}(X) = C \cdot \sum_{q > 0} MU^{2q}(X) =: R^{2*},\] since $MU^{2*+1}(*) = 0$ and $\widetilde{MU}^{2*+1}(X)$ can be handled by suspending $X$ once, and then the unreduced case follows directly.  We will show this by inducting on the value of ``$*$'': suppose that \[R^{-2j}_{(p)} = \widetilde{MU}^{-2j}(X)_{(p)}\] for $j < q$ and consider $x \in \widetilde{MU}^{-2q}(X)$.  Then, for $n \gg 0$, we have \[w^{n+q} P x = \sum_{|\alpha| \le n} w^{n - |\alpha|} a(v)^\alpha s_\alpha x.\]  Recall that $w$ is a power series in $v$ with coefficients in $C$ and leading term $(p-1)! v^{p-1}$, so that $v^{p-1} = w \cdot \theta(v)$ for some invertible series $\theta$ with coefficients in $C$.  Since $s_\alpha$ lowers degree, we have $s_\alpha x \in R$ by the inductive hypothesis, so \[v^m(w^qPx - x) = \psi_x(v)\] for $\psi_x(T) \in R_{(p)}\llbracket T \rrbracket$.
+
+Suppose $m \ge 1$ is the least integer for which we can write such an equation.  Applying the inclusion $i: X \to X \times B\Z/p$ to this equation sets $v = 0$ and yields $\psi(0) = 0$, hence $\psi_x(T) = T \omega_x(T)$ and \[v (v^{m-1}(w^qPx - x) - \omega_x(v)) = 0.\]  Since $v$ annihilates this equation, we can use the Gysin sequence associated to the spherical bundle \[S^1 \to B\Z/p \to \CP^\infty\] to produce a class $y \in \widetilde{MU}^{2(m-1)-2q}(X)$ with \[v^{m-1}(w^q P x - x) = \psi_1(x) + y \<p\>(v).\]  If $m > 1$, then $y \in R$ for degree reasons and hence the right-hand side gives an equation contradicting our minimality hypothesis.  So, $m = 1$, and the outer factor of $v^{m-1}$ is not present.  Restricting along $i$ again, we obtain the equation \[\left. \begin{array}{rr} -x & \text{if $q > 0$} \\ x^p - x & \text{if $q = 0$} \end{array} \right\} = \psi_1(0) + py.\]
+
+In the first case, where $q > 0$, it follows that $MU^{-2q}(X) \subseteq R^{-2q} + pMU^{-2q}(X)$, and since $MU^{-2q}(X)$ has finite order torsion, it follows that $MU^{-2q}(X) = R^{-2q}$.  In the other case, $x \mapsto x^p - x$ kills $\widetilde{MU}^0(X)/(R^0 + p\widetilde{MU}^0(X))$.  But the ideal $\widetilde{MU}^0(X)$ is nilpotent, so $x \mapsto x^p$ is a nilpotent endomorphism of $\widetilde{MU}^0(X) / p\widetilde{MU}^0(X)$.  So, it follows that $\widetilde{MU}^0(X) = R^0$, and induction proves the theorem.\todo{I feel I don't understand this second case.}
+\end{proof}
+
+\begin{corollary}\label{QuillenSurjective}
+The map $Laz \to MU^*$ is surjective. \qed
+\end{corollary}
+
+This is motivation enough for us to investigate the moduli of formal groups.  We will soon strengthen \Cref{QuillenSurjective} to show that this map is an isomorphism.
+
 
 
 
@@ -551,8 +633,6 @@ x & \mapsto & g \smile p^*(x),
 \end{align*}
 where $p: E \to X$ is the projection and $E_0$ is the image of the zero section.
 
-The first part of Adams's blue book is about the Landweber--Novikov operations.  In particular, he talks about the choice of funny total Chern class, saying that duals to monomials in $H_* BU$ are what span the cohomology of $H^* BU$ and that those are what interact well with the Whitney sum.
-
 The wrong--way maps come from conjugating by Poincar\'e duality: \[E^* X \cong E_{d_X-*} X \to E_{d_X-*} Y \cong E^*{*-d_X+d_Y} Y.\]  Poincar\'e duality comes from asserting that the stable normal bundle is oriented for the theory, and then Atiyah duality says \[D(X_+) \simeq \Susp^{-n} T(\nu) [\simeq T(\nu - n\eps) \simeq T(-\tau)]. \]
 
 ---
@@ -581,40 +661,6 @@ Remembering that $MO(1) \simeq \Susp^{-1} \Susp^\infty \RP^\infty$, we see that 
 
 ------
 
-be sure to talk about the total chern class $c_{\mathbf t}$:
-\begin{definition}
-There is a sequence of characteristic classes $c_\alpha(E)$ wrapping into $c_{\mathbf t}(E) = \sum_{\alpha} \mathbf t^\alpha c_\alpha(E)$ satisfying
-\begin{align*}
-c_{\mathbf t}(E \oplus E') & = c_{\mathbf t}(E) \cdot c_{\mathbf t}(E'), \\
-c_{\mathbf t}(\L) & = \sum_{j=0}^\infty t_j e(\L)^j, \\
-c_{\mathbf t}(E) & = \operatorname{Norm}\left( \sum_{j \ge 0} t_j e(\mathcal O(1))^j \right),
-\end{align*}
-where ``$\operatorname{Norm}(\alpha)$'' denotes the determinant of multiplication by $\alpha$, which is well-defined since $U^*(\P E)[\mathbf t]$ is a finite dimensional module over $U^*(X)[\mathbf t]$.
-\end{definition}
-
-
-
-
-
-
-
-
-
-\subsection*{Quillen's theorem}
-
---- we don't have this language yet ---
-
-Today we will give an analysis of $\context{MU}$, due to Quillen.
-
-\begin{theorem}[Quillen]
-There are isomorphisms
-\begin{align*}
-\Spec MU_* & \to \moduli{fgl}, \\
-\Spec MU_* MU & \to \moduli{fgl} \times \moduli{ps}^{\gpd}, \\
-\context{MU} & \to \left. \left. \moduli{fgl} \middle/\!\!\!\middle/ \left( \moduli{fgl} \times \moduli{ps}^{\gpd} \right) = \moduli{fg} \right. \right. . \qed
-\end{align*}
-\end{theorem}
-
 Q: Once you know that $MU$ has the universal formal group law on it, does the description of $MU_* MU$ follow immediately from evenness?  Probably?
 
 --- here's some of the real proof ---
@@ -623,73 +669,6 @@ Need to talk about power operations and the construction of the Steenrod operati
 
 Need to talk about Gysin pushforwards in complex bordism and in ordinary cohomology.  Compare these with the theory of Thom isomorphism in general.  They're equivalent, right?  A complex orientation makes proper maps induce shriek maps, and shriek maps can be used to deduce what Chern classes are by push-pull: if $\zeta: X \to E$ is the zero section of a complex bundle $\xi$, then $e(\xi) = i^* i_*(1)$ I think.
 
-Need to talk about characteristic classes and the $c_{\mathbf t}(x) = \sum_\alpha c_\alpha(x) \cdot \mathbf t^\alpha$ ``total Chern class''.  This will be hard, since you want to talk about Chern classes way later.  Maybe you'll just have to do it now\ldots
-
-\begin{definition}
-Using complex oriented maps $Z \to X$ of complex manifolds to model complex cobordism cocycles, pullback along a map is given by transverse perturbation and categorical pullback / intersection, and pushforward along a \emph{proper} map is given by postcomposition.
-\end{definition}
-
-\begin{definition}\todo{Where do these even come from? Ask Mike. Or look at Buchstaber's papers on infinitesimal flows\ldots}
-Let $f: Z \to X$ be a complex-oriented map of even dimension and whose orientation is represented by a factorization of an embedding $i$ into a complex vector bundle \[Z \xrightarrow i E \to X\] with complex normal bundle $\nu_i$.  Then, setting $\nu_f = f^* E - \nu_i \in K(Z)$, the \textit{Landweber--Novikov operations} \[s_{\mathbf t} = \sum_\alpha \mathbf t^\alpha s_\alpha: U^*(X) \to U^*(X)[\mathbf t]\] are defined by \[s_{\mathbf t}(f_* 1) = f_* c_{\mathbf t}(\nu_f),\] or more generally \[s_{\mathbf t}(f_* x) = f_*(c_{\mathbf t}(\nu_f) \cdot s_{\mathbf t}(x)).\]
-\end{definition}
-
-\begin{theorem}\todo{You really need these Riemann--Roch formulas.  Where do they come from?}
-Let $f: Z \to X$ be a $G$--map and let $z \in h(Z)$.  Then there is the square
-\begin{center}
-\begin{tikzcd}
-Z^G \arrow{r}{r_Z} \arrow{d}{f^G} & Z \arrow{d}{f} \\
-X^G \arrow{r}{r_X} & X
-\end{tikzcd}
-\end{center}
-and corresponding push-pull formula \[e(\mu(E)) \cdot r_X^* f_* z = f^G_*(e(\mu_i) \cdot r_Z^* z).\]
-\end{theorem}
-\begin{proof}
-This is 3.8. I'm not even sure what $\mu(E)$ means. In 3.4-6, they talk about the case of an inclusion, and there $\mu_i$ denotes the part of a certain $G$--equivariant vector bundle that has nontrivial $G$--action.  (I think maybe he defines $\mu_i$ and $\mu_f$, labeled by maps $i$ and $f$, and since the projection map from $E$ doesn't have a name he just calls it $\mu(E)$ instead?  That's silly.)
-\end{proof}
-
-\begin{theorem}
-Suppose $G$ acts transitively on $\{1, \ldots, k\}$ and let $\rho$ denote the corresponding representation of $G$ on the subspace of $(z_1, \ldots, z_k)$ in $\C^k$ such that $\sum_i z_i = 0$ and $G$ permutes the coordinates.  Suppose $f: Z \to X$ is a proper complex-oriented map of dimension $2q$ and that $m$ is an integer larger than the dimension of $Z$, so that $m \eps + \nu_f$ is a vector bundle over $Z$, well-defined up to isomorphism, where $\eps$ is the trivial complex line bundle.  Then in $h^{2m(k-1) - 2qk}(X)$ we have \[e(\rho)^m P(f_* 1) = f_* e(\rho \otimes (m \eps + \nu_f)).\]
-\end{theorem}
-\begin{proof}
-This is 3.12.  It follows from letting $G$ act on $f^{\times k}: Z^{\times k} \to X^{\times k}$ and using the push-pull formula for the invariant spaces (which are $Z$ and $X$) sitting inside of $Z^{\times k}$ and $X^{\times k}$: $P(f_* 1) = \Delta^* f^{\times k}_* 1$.
-\end{proof}
-
-\begin{definition}
-Let $f: Z \to X$ represent a complex-oriented cobordism class, and let $\L$ be any line bundle over $Z$ on which $G$ acts trivially.  Then:
-\begin{align*}
-e(\rho \otimes \L) & = e \left( \bigoplus_{i=1}^{k-1} \eta^i \otimes \L \right) \\
-& = \prod_{i=1}^{k-1} e(\eta^i \otimes \L) \\
-& = \prod_{i=1}^{k-1} \left( [i]_F(v) +_F e(\L) \right) \\
-& = w + \sum_{j \ge 1} a_j(v) e(\L)^j.
-\end{align*}
-The series $a_j(T) \in C\llbracket T \rrbracket$ are defined by this last relation.  We also have \[w = e(\rho) = (k-1)! v^{k-1} + \sum_{j \ge k} b_j v^j\] with $b_j \in C$.  More generally, if $E$ is any vector bundle over $Z$ on which $G$ acts trivially, then \[e(\rho \otimes E) = \sum_{|\alpha| \le r} w^{r - |\alpha|} (a(v))^\alpha c_\alpha(E).\]
-\end{definition}
-\begin{proof}
-This is the discussion around 3.16.
-\end{proof}
-
-\begin{theorem}
-Let $Q \to B$ be a principal $\Z/k$--bundle and let \[P: U^{-2q}(X) \to U^{-2qk}(B \times X)\] be the $k${\th} Steenrod power operation. Let $v$ be the Euler class of the line bundle on $B$ given by tensoring $Q$ over the character $\Z/k \cong U^1[k] \subseteq U^1$, and let $w$ be the Euler class of the bundle similarly induced from $Q$ by the reduced regular representation $\rho$.  Then, the Steenrod operation entwined with $Q$ is related to the Landweber--Novikov operations by the formula \[w^{n+q} P(x) = \sum_{|a| \le n} w^{n - |\alpha|} a(v)^\alpha s_\alpha(x),\] where $n \gg 0$ and the $a_j(T)$ are power series given above with coefficients in the subring $C$ generated by the coefficients of the standard formal group law on $U^*$.
-\end{theorem}
-\begin{proof}
-This is 3.17.
-\end{proof}
-
-\begin{theorem}
-If $X$ is finite, then
-\begin{align*}
-U^*(X) & = C \cdot \sum_{q \ge 0} U^q(X), \\
-\widetilde U^*(X) & = C \cdot \sum_{q > 0} U^q(X),
-\end{align*}
-where $C$ is the subring of $U^*(*)$ generated by the coefficients of the canonical formal group law.
-\end{theorem}
-\begin{proof}
-This is 5.1 in Quillen's paper. Use induction and the Landweber--Novikov--Steenrod relationship.  It's the nicest result in the whole thing.  The point is that if you apply the $p$th power operation to a class in nonzero degree, then up to filtration it acts like the identity but also there's a formula in terms of lower classes and the Landweber--Novikov power series, and this reduction to lower classes lets you power an induction.
-\end{proof}
-
-\begin{corollary}
-$U^{ev}(*) = C$ and $U^{odd}) = 0$. \qed
-\end{corollary}
 
 \begin{definition}(6.2)
 Let $\eps: U^*(X) \to H^*(X)$ be the reduction map and let the Boardman map $\beta: U^*(X) \to H^*(X)[\mathbf t]$ define Gysin maps in ordinary cohomology by $\beta = \eps \circ s_{\mathbf t}$ and hence for a proper complex oriented map $f: Z \to X$: \[\beta(f_* z) = f_*(c_{\mathbf t}^H(\nu_f) \cdot \beta z).\] 
