--- a/mo.tex
+++ b/mo.tex
@@ -97,7 +97,7 @@ MO \sm E \sm T(\xi) \arrow{r}{\simeq} \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \
 E \sm T(\xi) \arrow{r} & E \sm \Susp^\infty_+ X.
 \end{tikzcd}
 \end{center}
-The middle equivalence comes from the previous Thom isomorphism, smashed through with $E$.  The bottom arrow exists by applying the action map to both sides.  Reusing the bottom arrow at the top arrow and using the unitality of the monoid $E$ shows the map to be an equivalence. \todo{I'm a little confused here. Once we have the equivalence $MO \wedge T(\xi) \simeq MO \wedge \Sigma_+^\infty X$, why can't be apply $(\varphi, id)$ to this equivalence to obtain $E \wedge T(\xi) \simeq E \wedge \Sigma_+^\infty X$? -danny} \todo{The ``unitality'' shows that the vertical compositions are the identity, and then the middle map is a retract of an equivalence, right?}
+The middle equivalence comes from the previous Thom isomorphism, smashed through with $E$.  The bottom arrow exists by applying the action map to both sides.  Reusing the bottom arrow at the top arrow and using the unitality of the monoid $E$ shows the map to be an equivalence. \todo{I'm a little confused here. Once we have the equivalence $MO \wedge T(\xi) \simeq MO \wedge \Sigma_+^\infty X$, why can't be apply $(\varphi, id)$ to this equivalence to obtain $E \wedge T(\xi) \simeq E \wedge \Sigma_+^\infty X$? -danny} \todo{The ``unitality'' shows that the vertical compositions are the identity, and then the top map is a retract of an equivalence, right?}
 \end{proof}
 \todo{At least hint that there's a converse to this Theorem, to be explored later.}
 
@@ -157,7 +157,7 @@ The functor $\mathbb A^1$ introduced above is naturally valued in groups: since 
 \mathbb G_a & \xrightarrow{\chi} \mathbb G_a & -x & \mapsfrom x, \\
 \Spec \F_2 & \xrightarrow{\eta} \mathbb G_a & 0 & \mapsfrom x.
 \end{align*}
-\todo{I think you explained this differently in class, so I wanted to work out how to use the Yoneda lemma to deduce these.  The idea is that we want a map, e.g., $\mu \in \mathrm{Nat}(\mathbb A^1 \times \mathbb A^1, \mathbb A^1)$.  The functors involved are corepresented, so this is just $\mathrm{Nat}(h^{\mathbb{F}_2[x_1,x_2]},h^{\mathbb{F}_2[x]})$.  The Yoneda lemma says that this is the same as an algebra map $\mathbb{F}_2[x] \rightarrow \mathbb{F}_2[x_1,x_2]$, which is obtained by evaluating the natural transformation at $\mathbb{F}_2[x_1,x_2]$.  The identity map of $\mathbb{F}_2[x_1,x_2]$ corresponds to the pair of elements $x_1, x_2$ in $\mathbb{F}_2[x_1,x_2]$, which gets sent to $x_1 + x_2$.  So the algebra homomorphism we want sends $x$ to $x_1 + x_2$.} 
+\todo{I think you explained this differently in class, so I wanted to work out how to use the Yoneda lemma to deduce these.  The idea is that we want a map, e.g., $\mu \in \mathrm{Nat}(\mathbb A^1 \times \mathbb A^1, \mathbb A^1)$.  The functors involved are corepresented, so this is just $\mathrm{Nat}(h^{\mathbb{F}_2[x_1,x_2]},h^{\mathbb{F}_2[x]})$.  The Yoneda lemma says that this is the same as an algebra map $\mathbb{F}_2[x] \rightarrow \mathbb{F}_2[x_1,x_2]$, which is obtained by evaluating the natural transformation at the identity of $\mathbb{F}_2[x_1,x_2]$.  The identity map of $\mathbb{F}_2[x_1,x_2]$ corresponds to the pair of elements $x_1, x_2$ in $\mathbb{F}_2[x_1,x_2]$, which gets sent to $x_1 + x_2$.  So the algebra homomorphism we want sends $x$ to $x_1 + x_2$.} 
 \end{example}
 
 \begin{remark}
@@ -181,14 +181,14 @@ As presented above, the multiplicative group comes with a natural inclusion $\ma
 \begin{example}
 The following example shows that it is a bad idea to think of affine group schemes as a schemeified version of linear lie groups.  Define the group scheme $\alpha_2$ to be $\mathrm{Spec}(\mathbb{F}_2[x]/(x^2))$ with group scheme structure given by
 \begin{align*}
-\alpha_2 \times \alpha_2 &\xrightarrow{\mu} \alpha_2 & x_1 + x_2 \mapsfrom x, \\
+\alpha_2 \times \alpha_2 &\xrightarrow{\mu} \alpha_2 & x_1 + x_2 & \mapsfrom x, \\
 \alpha_2 & \xrightarrow{\chi} \alpha_2 & -x & \mapsfrom x, \\
 \Spec \F_2 & \xrightarrow{\eta} \alpha_2 & 0 & \mapsfrom x.
 \end{align*}
 
 This group scheme has several interesting properties:
 \begin{enumerate}
-\item $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$ but is not isomorphic to it.  The easiest way to see this is that $\mathrm{Hom}(\mu_2, \mu_2) = \mathbb{Z}/2\mathbb{Z}$ but $\mathrm{Hom}(\alpha_2, \mu_2) = \alpha_2$ (these homs are in the category of affine group schemes and give out an affine group scheme).
+\item $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$\todo{You introduced this notation in class, but it hasn't been defined in this document yet.  See example 1.2.12.} but is not isomorphic to it.  The easiest way to see this is that $\mathrm{Hom}(\mu_2, \mu_2) = \mathbb{Z}/2\mathbb{Z}$\todo{How is $\mathbb{Z}/2\mathbb{Z}$ an affine group scheme?  Is it just $\mathrm{Spec}(\mathbb{F}_2)$?} but $\mathrm{Hom}(\alpha_2, \mu_2) = \alpha_2$ (these homs are in the category of affine group schemes and give out an affine group scheme).  \todo{for jhfung: work this out}
 \item There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.
 \item If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence $0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0$.  However, this short exact sequence doesn't split (even after making a base change).
 \item The subgroups of $\alpha_2 \times \alpha_2$ of order two are parameterized by $\mathbb{P}^1$.  That is to say. if $R$ is an $\mathbb{F}_2$-algebra, then the subgroup schemes of $(\alpha_2 \times \alpha_2)_R$ of order two defined over $R$ are parameterized by $\mathbb{P}^1(R)$.
@@ -197,7 +197,7 @@ This group scheme has several interesting properties:
 
 Additionally, the colimit of the sets $\colim_{n \to \infty} \mathbb A^{1,(n)}(T)$ is of use in algebra: it is the collection of nilpotent elements in $T$.  These kinds of conditions which are ``unbounded in $n$'' appear frequently enough that we are moved to give these functors a name too:
 \begin{definition}
-An \textit{affine formal scheme} is an ind-system of finite affine schemes.  \todo{Several people had questions about the utility of this. Does it just add certain colimits to the category of \emph{finite} affine schemes?}  The morphisms between such schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\beta \colim_\alpha \CatOf{Schemes}(X_\alpha, Y_\beta).\]\todo{Question: can we reverse the order of taking lim and colim here?-danny}
+An \textit{affine formal scheme} is an ind-system of finite\todo{How are finite schemes characterized in the functor of points perspective?} affine schemes.  \todo{Several people had questions about the utility of this. Does it just add certain colimits to the category of \emph{finite} affine schemes?}  The morphisms between such schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\beta \colim_\alpha \CatOf{Schemes}(X_\alpha, Y_\beta).\]\todo{Question: can we reverse the order of taking lim and colim here?-danny}
 \end{definition}
 
 \begin{example}\label{FormalGaExample}
@@ -205,7 +205,7 @@ The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  Af
 \end{example}
 
 \begin{example}
-Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes are only occasionally group schemes.  The reader is invited\todo{Never invite the reader to do anything.} to check that there is an isomorphism $\{\Gm[n]\} \cong \{\Gm^{(n)}\}$ of formal schemes over $\F_2$, and that the induced formal group scheme structure on the right-hand side cannot be written level-wise --- rather, it involves the entire ind-scheme.\todo{Someone was interested in the relationship of this to the punctured formal scheme $\F_p(\!(q)\!)$.}
+Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes are only occasionally group schemes.  The reader is invited\todo{Never invite the reader to do anything.}\todo{Does this just follow that there is a common cofinal subsystem, i.e., when $n$ is a power of 2?}  to check that there is an isomorphism $\{\Gm[n]\} \cong \{\Gm^{(n)}\}$ of formal schemes over $\F_2$, and that the induced formal group scheme structure on the right-hand side cannot be written level-wise --- rather, it involves the entire ind-scheme.\todo{Someone was interested in the relationship of this to the punctured formal scheme $\F_p(\!(q)\!)$.}
 \end{example}
 
 Let's now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
